# Face-App

./: .gitignore  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/maliktillman/faceapp/: CameraActivity.java  GifImageView.java  JavaCamera3View.java  SplashActivity.java
app/src/main/res/drawable/: splash_screen.xml
app/src/main/res/layout/: activity_camera.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary341/: build.gradle
